Added a unit test for FunctionSolver